# brain-tumor-detection

./: .gitignore  README.md
app/: app.py
brain-tumor-detection/: pyproject.toml  requirements.txt
brain-tumor-detection/brain_tumor_detection/app/: app.py
brain-tumor-detection/brain_tumor_detection/brain_tumor_classification/: predict.py  train.py
brain-tumor-detection/brain_tumor_detection/brain_tumor_segmentation/: generate_masks.py  model.py  train.py
brain-tumor-detection/brain_tumor_detection/utils/: utils.py
brain-tumor-detection/tests/: test_brain_tumor_detection.py
brain_tumor_classification/: model.py  predict.py  train.py
brain_tumor_segmentation/: generate_masks.py  model.py  train.py
utils/: utils.py
