[tool.poetry]
name = "brain-tumor-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.16, <3.11"
pandas = "^2.0.1"
seaborn = "^0.12.2"
opencv-python = ">=4.5.5.62"
scikit-learn = "^1.2.2"
streamlit = "^1.22.0"
tensorflow-macos = "2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
